paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/type_def_1/sample_005/target.compile.log
error[E0277]: `main` has invalid return type `i32`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/type_def_1/sample_005/target.rs:36:14
   |
36 | fn main() -> i32 {
   |              ^^^ `main` can only return types that implement `Termination`
   |
   = help: consider using `()`, or a `Result`

warning: variable does not need to be mutable
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/type_def_1/sample_005/target.rs:37:9
   |
37 |     let mut distance: Miles = 40;
   |         ----^^^^^^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.